--- a/resources/docco.jade
+++ b/resources/docco.jade
@@ -1,5 +1,7 @@
 - var root_path = relative_base(file_path, context)
-- root_path = (root_path == "./") ? root_path : root_path.replace(/[^\/]+/g, '..')
+- console.log(root_path);
+- root_path = (root_path == "./") ? root_path : root_path.replace(/[^\/]+/g, '..').slice (1,-1);
+- console.log(root_path);
 !!! 5
 html
   head
