--- a/resources/docco.jade
+++ b/resources/docco.jade
@@ -1,6 +1,6 @@
 - var root_path = relative_base(file_path, context)
 - console.log(root_path);
-- root_path = (root_path == "./") ? root_path : root_path.replace(/[^\/]+/g, '..').slice (1,-1);
+- root_path = (root_path == "./") ? root_path : root_path.replace(/[^\/]+/g, '..').slice (1);
 - console.log(root_path);
 !!! 5
 html
